--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
     </div>    
 
 <script src="app.js"></script>
+<script src="https://raw.githubusercontent.com/mckamey/konami-js/master/konami.js"></script>
+<script>
+    $(document).on('keyup',
+
+    Konami.code(function() {
+        alert('word list');
+    })
+);
+</script>
 </body>
 </html>
