--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </div>    
 
 <script src="app.js"></script>
-<script src="https://raw.githubusercontent.com/mckamey/konami-js/master/konami.js"></script>
+<script src="https://raw.githubusercontent.com/mckamey/konami-js/master/konami.min.js"></script>
 <script>
     $(document).on('keyup',
 
     Konami.code(function() {
-        alert('word list');
+        alert(wordlist);
     })
 );
 </script>
