--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
 <script src="app.js"></script>
 <script src="https://raw.githubusercontent.com/mckamey/konami-js/master/konami.min.js"></script>
 <script>
-    $(document).on('keyup',
+var kkeys = [], konami = "38,38,40,40,37,39,37,39,66,65";
 
-    Konami.code(function() {
-        alert(wordlist);
-    })
-);
+$(document).keydown(function(e) {
+
+  kkeys.push( e.keyCode );
+
+  if ( kkeys.toString().indexOf( konami ) >= 0 ) {
+
+    $(document).unbind('keydown',arguments.callee);
+    
+    // do something awesome
+    alert(wordlist);
+    
+  }
+});
 </script>
 </body>
 </html>
