--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
 <script src="app.js"></script>
 <script src="https://raw.githubusercontent.com/mckamey/konami-js/master/konami.min.js"></script>
 <script>
-var kkeys = [], konami = "38,38,40,40,37,39,37,39,66,65";
+var keyHandler = function (event) {
 
-$(document).keydown(function(e) {
+	// If the key isn't in the pattern, or isn't the current key in the pattern, reset
+	if (pattern.indexOf(event.key) < 0 || event.key !== pattern[current]) {
+		current = 0;
+		return;
+	}
 
-  kkeys.push( e.keyCode );
+	// Update how much of the pattern is complete
+	current++;
 
-  if ( kkeys.toString().indexOf( konami ) >= 0 ) {
+	// If complete, alert and reset
+	if (pattern.length === current) {
+		current = 0;
+		window.alert(wordlist);
+	}
 
-    $(document).unbind('keydown',arguments.callee);
-    
-    // do something awesome
-    alert(wordlist);
-    
-  }
-});
+};
 </script>
 </body>
 </html>
